--- a/java/IconPoseur/.classpath
+++ b/java/IconPoseur/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="dep/jai-imageio-core.jar"/>
 	<classpathentry kind="lib" path="dep/jai-imageio-jpeg2000.jar"/>
 	<classpathentry kind="lib" path="dep/orange-extensions.jar"/>
+	<classpathentry kind="lib" path="dep/javaDesktopStub.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
